; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_http_check.c_tracker_http_check_stop.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_http_check.c_tracker_http_check_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_http_check_interval = common dso_local global i64 0, align 8
@http_check_tid = common dso_local global i32 0, align 4
@SIGINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tracker_http_check_stop() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @g_http_check_interval, align 8
  %3 = icmp sle i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @http_check_tid, align 4
  %7 = load i32, i32* @SIGINT, align 4
  %8 = call i32 @pthread_kill(i32 %6, i32 %7)
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %5, %4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @pthread_kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
